# houseScanner

./: .dockerignore  .gitignore  AGENT_FLOW_VALIDATION.md  API_MIGRATION_SUMMARY.md  BACKEND_TIMEOUT_UPDATE.md  CHECKLIST_FLOW.md  DATABASE_ACCESS_GUIDE.md  DOCKER.md  FINAL_FLOW.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  README_DOCKER  S3_STORAGE_GUIDE.md  SCAN_DATA_PERSISTENCE.md  SCAN_PROCESSING_FLOW.md  WEBSOCKET_TESTING_GUIDE.md  build-and-push.sh  docker-compose.dev.yml  docker-compose.prod.yml  image_tag.txt  setup-storage.sh  start_server.sh
.github/: SECRETS.md
.github/notActive/: deploy-agents.yml  deploy-all.yml  deploy-backend.yml  deploy-client.yml  quick-update.yml
.github/workflows/: deploy-agents.yml  deploy-all.yml  deploy-backend.yml  deploy-client.yml  deploy.yml
agents-service/: .env.example  .env.example.prod  .env.prod.template  .gitignore  API_REQUEST_EXAMPLES.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  check_langsmith.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
agents-service/app/: __init__.py  main.py
agents-service/app/api/v1/: routes_scan.py  routes_simulate.py
agents-service/app/api/v1/model/: __init__.py  request.py  response.py
agents-service/app/application/services/: agent_tracker.py  aggregation.py  cost_manager.py  preprocess.py
agents-service/app/application/use_cases/: __init__.py  run_agent_pipeline.py  run_agent_pipeline_langgraph.py  run_scan.py  run_simulation.py
agents-service/app/core/: deps.py  lifespan.py  settings.py
agents-service/app/domain/: __init__.py  policies.py
agents-service/app/domain/models/: __init__.py  agent_contracts.py  entities.py  value_objects.py
agents-service/app/infrastructure/llm/: agents.py  openai_client.py
agents-service/app/infrastructure/loaders/: base_house_loader.py  base_products_loader.py  base_rooms_loader.py  custom_user_loader.py
agents-service/app/infrastructure/orchestration/: __init__.py  nodes.py  rate_limiter.py  state.py  workflow.py
agents-service/app/infrastructure/storage/: fetch.py  localfs.py
agents-service/data/: custom_user_checklist.json  house_type_checklist.json  rooms_type_checklist.json
ansible/: README_REGISTRY_DEPLOYMENT.md  all-steps.yml  deploy_server_app.yml  deploy_server_app_with_registry.yml  dev-infra-setup.yml  dev-infra-teardown.yml  prod-all-steps.yml  prod-step2-build-images.yml  prod-step3-deploy-application.yml  prod-teardown.yml  requirements.txt  setup.sh  step1-build-images.yml  step1-provision-infrastructure.yml  step2-build-images.yml  step2-provision-infrastructure.yml  step3-deploy-application.yml  teardown_server_app.yml
ansible/group_vars/: dev.yaml  env.yaml  secrets.yaml.example  secrets.yaml.template
backend/: .dockerignore  .env.example  .env.example.prod  .env.prod.template  Dockerfile.dev  Dockerfile.prod  README.md  init-minio.sh  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
backend/test/: app.e2e-spec.ts
client-pwa/: .dockerignore  .env.example  .env.example.prod  .env.prod.template  .env.template  Dockerfile.dev  Dockerfile.prod  nginx.conf  package-lock.json  package.json  postcss.config.js  vite.config.ts
client-pwa/dev-dist/: sw.js
house-check-pwa/: index.html  package-lock.json  package.json
old_server/: .env.example  README.md  agents_new.py  app.py  logging_config.py  schemas.py  test_logging.sh  token_usage.py
server/: agents.py  app.py  checklist_loader.py  config.py  requirements.txt  setup.sh  utils.py
(+147 files in other folders)
